--- a/src/main/resources/spring-redis.properties
+++ b/src/main/resources/spring-redis.properties
@@ -1,5 +1,5 @@
-#spring.redis.host=118.25.0.69
-spring.redis.host=localhost
+spring.redis.host=118.25.0.69
+#spring.redis.host=localhost
 #Redis服务器连接端口
 spring.redis.port=6379
 #Redis服务器连接密码（默认为空）
