--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>1.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.gitee.qdbp.thirdparty/ueditor -->
+        <dependency>
+            <groupId>com.gitee.qdbp.thirdparty</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>1.4.3.4</version>
+        </dependency>
 
 
     </dependencies>
