--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.servlet.context-path=/
+server.servlet.context-path=/dazhong
 #日志文件配置
 logging.config=classpath:logger/log4j2.xml
 
