--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ logging.config=classpath:logger/log4j2.xml
 spring.servlet.multipart.max-file-size=20MB
 
 spring.servlet.multipart.max-request-size=100MB
+
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://118.25.0.69:3306/lengendsneverdie?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+
+
+mybatis.type-aliases-package=com.zga.dazhong.wxs.modules.entity
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
