--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.servlet.multipart.max-file-size=20MB
 
 spring.servlet.multipart.max-request-size=100MB
 
+spring.http.encoding.force=true
+
+#web.upload-path=D:/home/media/
+#spring.mvc.static-path-pattern=/upload/**
+#spring.resources.static-locations=file:${web.upload-path}
+#spring.mvc.static-path-pattern=/home/media/
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://118.25.0.69:3306/lengendsneverdie?useSSL=false
