--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,32 @@ apollo.bootstrap.eagerLoad.enabled=true
 #多个namespace用英文逗号分隔
 apollo.bootstrap.namespaces=application
 apollo.meta=http://118.25.0.69:8080
+
+
+
+
+
+#server.port = 8080
+#server.servlet.context-path = /dazhong
+##日志文件配置
+#logging.config = classpath:logger/log4j2.xml
+#
+#spring.servlet.multipart.max-file-size = 20MB
+#
+#spring.servlet.multipart.max-request-size = 100MB
+#
+#spring.http.encoding.force = true
+#
+##web.upload-path=D:/home/media/
+##spring.mvc.static-path-pattern=/upload/**
+##spring.resources.static-locations=file:${web.upload-path}
+##spring.mvc.static-path-pattern=/home/media/
+#
+##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://118.25.0.69:3306/lengendsneverdie?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = 123456
+#
+#
+#mybatis.type-aliases-package = com.zga.dazhong.wxs.modules.entity
+#mybatis.mapper-locations = classpath:mybatis/mapper/*.xml
